# Qt-LoginApp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: workflows
.github/workflows/: ci.yml
buils/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  LoginApp.sln  LoginApp.vcxproj  LoginApp.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  tests.vcxproj  tests.vcxproj.filters
buils/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
forms/: mainwindow.ui
include/: mainwindow.h  secdialog.h
src/: mainwindow.cpp  secdialog.cpp
tests/: test_mainwindow.cpp
